syntax = "proto3";
package teg_protobufs;

// Combinators send CombinatorMessages
message CombinatorMessage {
  // repeated uint32 ack_message_ids = 1;
  // uint32 message_id = 2;

  oneof payload {
    SetConfig set_config = 9;
    SpoolTask spool_task = 10;
    PauseTask pause_task = 11;
    DeleteTaskHistory delete_task_history = 12;
    DeviceDiscovered device_discovered = 13;

    EStop estop = 15;
    Reset reset = 16;
  }

  message SetConfig {
    // JSON encoded machine configuration
    string file_path = 1;
  }

  message SpoolTask {
    uint32 task_id = 1;
    string file_path = 2;

    // 3-7 are reserved for future file formats

    // string name = 8;

    // Override tasks can be ran during jobs and do not set the
    // despooled_line_number in the MachineMessage.
    //
    // They are executed silently to adjust machine settings such as feedrate
    // override during another task.
    bool machine_override = 9;
  }

  message PauseTask {
    uint32 task_id = 1;
  }

  message DeviceDiscovered {}
  message EStop {}
  message Reset {}

  message DeleteTaskHistory {
    repeated uint32 task_ids = 1;
  }
}
